--- a/pages/about.qmd
+++ b/pages/about.qmd
@@ -1,6 +1,6 @@
 # About me
 
-I am currently a scientific staff member at the Institute of German Language and Linguistics at the Humboldt-Universität zu Berlin. I recently completed my doctoral work in the Psycholinguistics group under the supervision of Prof. Pia Knoeferle, and was a doctoral fellow at the Einstein Center for Neurosciences at the Charité - Universitätsmediyin Berlin, and part of the doctoral program at the Berlin School of Mind and Brain.
+I am a scientific support staff member at the Leibniz-Centre General Linguistics (Leibniz-Zentrum Allgemeine Sprachwissenschaft; ZAS), providing support for data science/statistics and data management. I was formerly a scientific staff member (researcher and statistics consultant/lecturer) at the Institute of German Language and Linguistics at the Humboldt-Universität zu Berlin where I completed my doctoral work in the Psycholinguistics group under the supervision of Prof. Pia Knoeferle. During my doctoral studies I was also a fellow at the Einstein Center for Neurosciences at the Charité - Universitätsmedizin Berlin, and am an alumnus of the doctoral program at the Berlin School of Mind and Brain.
 
 After completing an Honours Specialist B.A. in Linguistics at the University of Toronto, I earned my TESOL certification and moved to Berlin to teach English at various companies and institutions, including the Humboldt-Universität zu Berlin. After some years I returned to academia by completing a joint Master's of Science as part of the European Master's in Clincal Linguistics (EMCL 2015-17 cohort) at the Univerisity of Eastern Finland, Univerisity of Potsdam (Germany), and Univerisity of Groningen (the Netherlands). I also hold a M.A. in Linguistics from the University of Eastern Finland, which was completed in tandem with my M.Sc.
 
@@ -10,7 +10,7 @@ My current projects investigate the influence of high-level knowledge of the rea
 
 ## Outreach
 
-I am a co-founder and co-organiser of the [Friday Primes](https://sites.google.com/view/thefridayprimes), a monthly Berlin/Potsdam meet-up for PhDs and postdocs working on language processing.
+I was a co-founder and co-organiser of the [Friday Primes](https://sites.google.com/view/thefridayprimes), a monthly Berlin/Potsdam meet-up for PhDs and postdocs working on language processing.
 
 ## Keywords
 
